--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,11 @@
+.App header {
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 30px;
+}
 
+.App footer{
+  text-align: center;
+  font-size: 15px;
+  margin-top: 50px;
+}
