--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,13 @@
   font-family: 'Cormorant Garamond', serif;
 }
 
-.App header {
+.App header{
+  background: #fff;
+  margin-top: 35px;
+  padding: 24px 12px 73px 12px;
+}
+
+.App h2 {
   font-size: 70px;
   text-align: center;
   margin-bottom: 20px;
@@ -10,8 +16,9 @@
 
 .App h5{
   font-size: 20px;
-  margin-top: 35px;
-  margin-bottom: 15px;
+  margin-top: 12px;
+  margin-bottom: 54px;
+  text-align: center;
 }
 
 .App footer{
