--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+body{
+  background-image: url("https://images.unsplash.com/photo-1645990195529-14aa9e7b7a6b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+  background-size: cover;
+}
+
 .App {
   font-family: 'Cormorant Garamond', serif;
+  margin: 0 auto;
 }
 
 .App header{
@@ -24,5 +30,10 @@
 .App footer{
   text-align: center;
   font-size: 15px;
-  margin-top: 50px;
+  margin-top: 20px;
+  color: #fff;
+}
+
+.App footer a{
+  color: #f2dac9;
 }
