--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -1,3 +1,10 @@
-.Phonetic {
-   
+.Phonetic a {
+    color: #f2dac9;
+    line-height: 35px;
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+.Phonetic .phonetic-text{
+    font-size: 20px;
 }
